apps/workloads/automation/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-ui
spec:
  selector:
    app: n8n
  ports:
    - port: 5678
      name: web-ui
