apps/workloads/automation/n8n/external-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-external-route
  namespace: automation
spec:
  parentRefs:
    - name: external-gateway
      namespace: traefik
  hostnames:
    - "n8n.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /webhook
        - path:
            type: PathPrefix
            value: /webhook-test
        - path:
            type: PathPrefix
            value: /webhook-waiting
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: n8n-webhook-rate-limit
      backendRefs:
        - name: n8n-ui
          port: 5678
