apps/workloads/automation/n8n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "n8n.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: PathPrefix
            value: /webhook-test
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: compress
      backendRefs:
        - name: n8n-main
          port: 5678
    - matches:
        - path:
            type: PathPrefix
            value: /webhook
        - path:
            type: PathPrefix
            value: /webhook-waiting
      backendRefs:
        - name: n8n-webhook-processor
          port: 5678
