apps/workloads/automation/n8n/redis-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n-redis-policy
spec:
  endpointSelector:
    matchLabels:
      app: redis-n8n
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: "k8s:app.kubernetes.io/name"
              operator: "In"
              values:
                - "n8n"
                - "n8n-worker"
                - "n8n-webhook-processor"
      toPorts:
        - ports:
            - port: "6379"
              protocol: "TCP"
